# schedule_solver

./: Cargo.toml  LICENSE  README.md
examples/: expected_output_1.json  input_1.json
src/: data.rs  main.rs  openapi.yaml  server.rs  solver.rs
test_script/: request.py
