[package]
name = "schedule_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
good_lp = { version = "1.14.0", features = ["highs"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.13.0" 
log = "0.4.21"
env_logger = "0.11.3"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"



